# docsum-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt
docsum/: cli.py  readers.py  summarize.py  utils.py
examples/: example_usage.py
